--- a/WorkInterruption/src/main/res/values/strings.xml
+++ b/WorkInterruption/src/main/res/values/strings.xml
@@ -3,6 +3,12 @@
 
     <string name="app_name">Work Interruption</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+
+    <string name="work">Work</string>
+    <string name="work_break">Break</string>
+    <string name="meeting">Meeting</string>
+    <string name="interrupt">Interrupt</string>
+
+    <string name="status_stopped">Stopped</string>
 
 </resources>
