--- a/WorkInterruption/src/main/res/values/strings.xml
+++ b/WorkInterruption/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="work_break">Break</string>
     <string name="meeting">Meeting</string>
     <string name="interrupt">Interrupt</string>
-
     <string name="status_stopped">Stopped</string>
+    <string name="status_active">Active</string>
 
 </resources>
